=======================================================================
VERSION 0.2.8
=======================================================================

12-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/sidebar/tractography/track_list.h:
    * src/mrview/sidebar/tractography/track_list.cpp:
    * src/mrview/sidebar/tractography/track_list_item.h:
    * src/mrview/sidebar/tractography/track_list_item.cpp:
      a few bug fixes for the colour handling and support for depth blend on
      64 bit systems
    
04-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * src/mrview/scaling.h: 
      fix automatic windowing in the presence of infinite or NaN voxel values.

03-03-2010 J-Donald Tournier <d.tournier@brain.org.au>
    * cmd/normalise_tracks.cpp: 
      skip points in the tracks file if they are outside the supplied warp

    * cmd/streamtrack.cpp:
    * src/dwi/tractography/tracker/base.h:
    * src/dwi/tractography/tracker/base.cpp:
      new option to stop tracking as soon as track enters any include region.

    * cmd/streamtrack.cpp:
    * src/dwi/tractography/tracker/base.h:
    * src/dwi/tractography/tracker/base.cpp:
      new option to prevent tri-linear interpolation of mask regions.

    * src/dwi/tractography/tracker/base.h:
    * src/dwi/tractography/tracker/base.cpp:
    * src/dwi/tractography/tracker/dt_stream.cpp:
    * src/dwi/tractography/tracker/sd_stream.cpp:
    * src/dwi/tractography/tracker/sd_prob.cpp:
      tracking now stops immediately before the track leaves the mask, rather
      than immediately after.

    * lib/file/dicom/image.h:
    * lib/file/dicom/image.cpp:
    * lib/file/dicom/mapper.cpp:
      improved GE gradient information support

    * lib/file/dicom/element.cpp: fix bug in handling of IS sequences

09-12-2009 J-Donald Tournier <d.tournier@brain.org.au>
    * lib/file/dicom/mapper.cpp: handle zero directions in gradient scheme